<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bookmanager.chalmers.edu.bookmanager2.AddBookActivity"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_below="@+id/appbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/activity_header_add"
            android:textSize="20dp"
            />

        <EditText
            android:id="@+id/add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_title" />

        <EditText
            android:id="@+id/add_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_author" />

        <EditText
            android:id="@+id/add_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_course" />

        <EditText
            android:id="@+id/add_isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_isbn" />

        <EditText
            android:id="@+id/add_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_price" />


    </LinearLayout>

</RelativeLayout>
