<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bookmanager.chalmers.edu.bookmanager.SummaryActivity">


    <TextView
        android:id="@+id/book_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:text="TextView"
        android:layout_marginTop="26dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/book_count"
        android:layout_alignStart="@+id/book_count"
        android:layout_below="@+id/book_count"
        android:layout_marginTop="45dp"
        android:text="@string/title_sum" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/title_expensive"
        android:layout_below="@+id/textView9"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10"
        android:layout_below="@+id/textView10"
        android:layout_marginTop="51dp"
        android:text="@string/title_cheapest" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11"
        android:layout_below="@+id/textView11"
        android:layout_marginTop="53dp"
        android:text="@string/title_average" />

    <TextView
        android:id="@+id/total_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView9"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:layout_toEndOf="@+id/textView11"
        android:layout_toRightOf="@+id/textView11"
        android:text="TextView" />

    <TextView
        android:id="@+id/most_expensive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/total_cost"
        android:layout_alignRight="@+id/total_cost"
        android:layout_alignTop="@+id/textView10"
        android:text="TextView" />

    <TextView
        android:id="@+id/least_expensive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/most_expensive"
        android:layout_alignStart="@+id/most_expensive"
        android:layout_alignTop="@+id/textView11"
        android:text="TextView" />

    <TextView
        android:id="@+id/average_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/least_expensive"
        android:layout_alignRight="@+id/least_expensive"
        android:layout_alignTop="@+id/textView12"
        android:text="TextView" />


</RelativeLayout>
